# lam

./: .gitignore
gcc-14.2.0/gcc/: Makefile.in  lam_pass.cc  passes.def  tree-pass.h
llvm_lam/: CMakeLists.txt  test.sh
llvm_lam/input/: input.c
llvm_lam/pass_lam/: .ninja_deps  .ninja_log  CMakeLists.txt  Makefile  PassLam.cpp  cmake_install.cmake
nginx-1.26.2/: test.c
nginx-1.26.2/conf/: nginx.conf
nginx-1.26.2/objs/: Makefile  autoconf.err  nginx  ngx_auto_config.h
